--- a/src/components/contact-banner/contact-banner.module.css
+++ b/src/components/contact-banner/contact-banner.module.css
@@ -147,4 +147,11 @@
     width: 16rem;
     font-size: 1rem;
   }
+
+}
+
+@media (max-width: 640px) {
+  .right {
+    display: none;
+  }
 }
