--- a/src/components/section/section.module.css
+++ b/src/components/section/section.module.css
@@ -11,6 +11,10 @@
   /* animation-delay: 1s; */
 }
 
+.visible img {
+  width: 100%;
+}
+
 @keyframes monitorIn {
   from {
     transform: translateY(50px);
